[package]
name = "callback"
version = "0.0.3"
authors = ["Richard Anaya"]
edition = "2018"
description = "A library for handling callbacks in web assembly"
license = "MIT OR Apache-2.0"
categories = ["wasm", "no-std"]
repository = "https://github.com/richardanaya/callback"

[dependencies]
once_cell = "1.2.0"
spin = "0.5.2"
wasm_common = "0.0.1"